--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -73,7 +73,7 @@
                         android:layout_width="@dimen/_280sdp"
                         android:layout_height="@dimen/_350sdp"
                         android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_8sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:background="@color/white"
                         app:cardCornerRadius="@dimen/_10sdp">
@@ -101,13 +101,14 @@
                                     <EditText
                                         android:id="@+id/refundAmountET"
                                         android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
+                                        android:layout_height="@dimen/_72sdp"
                                         android:background="@color/white"
                                         android:fontFamily="@font/opensans_bold"
-                                        android:gravity="center_vertical|end"
-                                        android:windowSoftInputMode="stateHidden"
+                                        android:gravity="center_vertical|right"
                                         android:hint="0.00"
                                         android:textIsSelectable="false"
+                                        android:cursorVisible="true"
+                                        android:longClickable="false"
                                         android:clickable="false"
                                         android:inputType="numberDecimal"
                                         android:maxLength="8"
