--- a/app/src/main/res/layout/seekbar_with_floating_text.xml
+++ b/app/src/main/res/layout/seekbar_with_floating_text.xml
@@ -7,8 +7,10 @@
         android:id="@+id/tv_floating_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/opensans_bold"
+        android:textColor="@color/primary_black"
         android:singleLine="true"
-        android:textSize="12sp" />
+        android:textSize="@dimen/_10ssp" />
 
     <SeekBar
         android:id="@+id/seekbar"
@@ -28,7 +30,10 @@
         android:layout_below="@+id/seekbar"
         android:layout_marginStart="40dp"
         android:layout_marginTop="-20dp"
-        android:text="0:00am" />
+        android:textColor="@color/primary_black"
+        android:fontFamily="@font/opensans_bold"
+        android:text="0:00am"
+        android:textSize="@dimen/_10ssp" />
 
     <TextView
         android:id="@+id/tv_end_time"
@@ -38,5 +43,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="-20dp"
         android:layout_marginEnd="40dp"
-        android:text="11:59pm" />
+        android:textColor="@color/primary_black"
+        android:fontFamily="@font/opensans_bold"
+        android:text="11:59pm"
+        android:textSize="@dimen/_10ssp" />
 </RelativeLayout>
