--- a/app/src/main/res/layout/activity_refund_transaction.xml
+++ b/app/src/main/res/layout/activity_refund_transaction.xml
@@ -264,8 +264,8 @@
                                     android:layout_marginLeft="@dimen/_15sdp"
                                     android:layout_marginRight="@dimen/_15sdp"
                                     android:layout_marginBottom="@dimen/_109sdp"
-                                    android:fontFamily="@font/opensans_semibold"
-                                    android:hint="Requested by Customer "
+                                    android:fontFamily="@font/opensans_regular"
+                                    android:hint="Reason for Refund (Maximun 120 characters)"
                                     android:padding="@dimen/_6sdp"
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
