--- a/app/src/main/res/layout/activity_refund_transaction_success.xml
+++ b/app/src/main/res/layout/activity_refund_transaction_success.xml
@@ -60,6 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_bold"
+                    android:layout_marginStart="@dimen/_3sdp"
                     android:text="@string/currency"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11sdp" />
@@ -125,7 +126,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_12sdp"
-                android:fontFamily="@font/opensans_regular"
+                android:fontFamily="@font/opensans_semibold"
                 android:gravity="center"
                 android:text="@string/refund_trans"
                 android:textColor="@color/primary_green"
