--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -275,6 +275,7 @@
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursorcolor"
+                                    android:textDirection="rtl"
                                     android:textSize="@dimen/_53ssp" />
 
                                 <TextView
