--- a/app/src/main/res/layout/activity_id_ve_additional_action.xml
+++ b/app/src/main/res/layout/activity_id_ve_additional_action.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,210 +8,156 @@
     android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
     tools:context=".view.IdVeAdditionalActionActivity">
-    <LinearLayout
-        android:id="@+id/ssnCloseLL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_21sdp"
-        android:layout_marginTop="@dimen/_45sdp">
 
-        <ImageView
+    <LinearLayout
+        android:id="@+id/idveriErrWithSSNLL"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/idveridoneBtn">
+
+        <LinearLayout
+            android:id="@+id/ssnCloseLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/_15sdp"
-            android:src="@drawable/ic_close" />
+            android:layout_marginLeft="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_45sdp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/_15sdp"
+                android:src="@drawable/ic_close" />
+
+        </LinearLayout>
+
+
+        <ImageView
+            android:layout_width="@dimen/_80sdp"
+            android:layout_height="@dimen/_90sdp"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:src="@drawable/ic_ssn_fail" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/add_ac"
+            android:textAlignment="center"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_16ssp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_21sdp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_21sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:text="@string/add_actioncontent"
+            android:textAlignment="center"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/ssnTIL"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_54sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
+            android:hint="SSN"
+            android:textColorHint="@color/black"
+            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
+            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
+            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
+            app:boxCornerRadiusTopStart="@dimen/_10sdp"
+            app:boxStrokeColor="@color/primary_color"
+            app:expandedHintEnabled="false"
+            app:hintTextColor="@color/primary_color"
+            android:visibility="gone">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ssnET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_semibold"
+                android:hint="@string/ssnhint"
+                android:imeOptions="actionDone"
+                android:inputType="number"
+                android:maxLength="9"
+                android:padding="@dimen/_14sdp"
+                android:textColor="@color/primary_black"
+                android:textColorHint="@color/light_gray"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:textSize="@dimen/_12ssp"
+                android:autofillHints="creditCardSecurityCode"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.greenbox.coyni.utils.outline_et.SSNBOEditText
+            android:id="@+id/ssnOutLineBoxET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_54sdp"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginEnd="@dimen/_21sdp"/>
+
+        <LinearLayout
+            android:id="@+id/ssnErrorLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            android:layout_marginStart="@dimen/_21sdp"
+            android:layout_marginEnd="@dimen/_21sdp">
+
+            <ImageView
+                android:layout_width="@dimen/_12sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:src="@drawable/ic_erro" />
+
+            <TextView
+                android:id="@+id/ssnErrorTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:textColor="@color/error_red"
+                android:textSize="@dimen/_10ssp" />
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
-    <ScrollView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/idveridoneBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none">
+        android:layout_height="@dimen/_43sdp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="@dimen/_21sdp"
+        android:layout_marginRight="@dimen/_21sdp"
+        android:layout_marginBottom="@dimen/_30sdp"
+        app:cardBackgroundColor="@color/primary_green"
+        app:cardCornerRadius="@dimen/_21sdp">
 
-        <LinearLayout
-            android:id="@+id/idveriErrWithSSNLL"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:text="@string/submitbtn"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_12ssp" />
+    </androidx.cardview.widget.CardView>
 
-
-
-            <ImageView
-                android:layout_width="@dimen/_80sdp"
-                android:layout_height="@dimen/_90sdp"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:src="@drawable/ic_ssn_fail" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_14sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:text="@string/add_ac"
-                android:textAlignment="center"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_16ssp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:layout_marginRight="@dimen/_21sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/add_actioncontent"
-                android:textAlignment="center"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/ssnTIL"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_54sdp"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp"
-                android:hint="SSN"
-                android:textColorHint="@color/black"
-                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
-                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
-                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
-                app:boxCornerRadiusTopStart="@dimen/_10sdp"
-                app:boxStrokeColor="@color/primary_color"
-                app:expandedHintEnabled="false"
-                app:hintTextColor="@color/primary_color">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/ssnET"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:hint="@string/ssnhint"
-                    android:imeOptions="actionDone"
-                    android:inputType="number"
-                    android:maxLength="9"
-                    android:padding="@dimen/_14sdp"
-                    android:textColor="@color/primary_black"
-                    android:textColorHint="@color/light_gray"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textSize="@dimen/_12ssp"
-                    android:autofillHints="creditCardSecurityCode"/>
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="@dimen/_44sdp">-->
-
-<!--                <LinearLayout-->
-<!--                    android:id="@+id/hintdHolderLL"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginStart="@dimen/_21sdp"-->
-<!--                    android:layout_marginTop="@dimen/_10sdp"-->
-<!--                    android:layout_marginEnd="@dimen/_21sdp"-->
-<!--                    android:background="@drawable/outline_box_unfocused"-->
-
-<!--                    android:gravity="center"-->
-<!--                    app:layout_constraintLeft_toLeftOf="parent"-->
-<!--                    app:layout_constraintRight_toRightOf="parent"-->
-<!--                    app:layout_constraintTop_toTopOf="parent">-->
-
-
-<!--                    <EditText-->
-<!--                        android:id="@+id/ssnET"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="55dp"-->
-<!--                        android:layout_gravity="center"-->
-<!--                        android:background="@android:color/transparent"-->
-<!--                        android:digits="1234567890"-->
-<!--                        android:fontFamily="@font/opensans_semibold"-->
-<!--                        android:hint="•••-••-••••"-->
-<!--                        android:inputType="numberPassword"-->
-<!--                        android:maxLines="1"-->
-<!--                        android:padding="14dp"-->
-<!--                        android:singleLine="true"-->
-<!--                        android:maxLength="9"-->
-<!--                        android:textColor="@color/primary_black"-->
-<!--                        android:textColorHint="@color/light_gray"-->
-<!--                        android:textCursorDrawable="@drawable/cursor_color"-->
-<!--                        android:textSize="@dimen/_12ssp"-->
-<!--                        />-->
-
-
-<!--                </LinearLayout>-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/hintTV"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginStart="10dp"-->
-<!--                    android:layout_marginTop="8dp"-->
-<!--                    android:background="@android:color/white"-->
-<!--                    android:fontFamily="@font/opensans_semibold"-->
-<!--                    android:paddingStart="4dp"-->
-<!--                    android:paddingEnd="4dp"-->
-<!--                    android:text="SSN"-->
-<!--                    android:textColor="@color/primary_black"-->
-<!--                    android:textSize="@dimen/_12ssp"-->
-<!--                    android:visibility="visible"-->
-<!--                    app:layout_constraintBottom_toTopOf="@+id/hintdHolderLL"-->
-<!--                    app:layout_constraintStart_toStartOf="@+id/hintdHolderLL"-->
-<!--                    app:layout_constraintTop_toTopOf="@+id/hintdHolderLL" />-->
-<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-            <LinearLayout
-                android:id="@+id/ssnErrorLL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="gone"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:layout_marginEnd="@dimen/_21sdp">
-
-                <ImageView
-                    android:layout_width="@dimen/_12sdp"
-                    android:layout_height="@dimen/_12sdp"
-                    android:src="@drawable/ic_erro" />
-
-                <TextView
-                    android:id="@+id/ssnErrorTV"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_10sdp"
-                    android:fontFamily="@font/opensans_regular"
-                    android:textColor="@color/error_red"
-                    android:textSize="@dimen/_10ssp" />
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/idveridoneBtn"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_43sdp"
-                android:layout_marginLeft="@dimen/_21sdp"
-                android:layout_marginTop="@dimen/_70sdp"
-                android:layout_marginRight="@dimen/_21sdp"
-                android:layout_marginBottom="@dimen/_2sdp"
-                app:cardBackgroundColor="@color/primary_green"
-                app:cardCornerRadius="@dimen/_21sdp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="@string/submitbtn"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_12ssp" />
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+</RelativeLayout>
