--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -121,6 +121,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
+                    android:text=""
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/error_red"
                     android:textSize="@dimen/text_size_14sp"></TextView>
@@ -132,7 +133,7 @@
                 android:layout_height="@dimen/_43sdp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="30dp"
-                app:cardBackgroundColor="@color/primary_green"
+                app:cardBackgroundColor="@color/bg_inactive"
                 app:cardCornerRadius="@dimen/_21sdp">
 
                 <TextView
