--- a/app/src/main/res/layout/activity_reserve_details.xml
+++ b/app/src/main/res/layout/activity_reserve_details.xml
@@ -128,7 +128,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_8sdp"
                             android:layout_weight="1"
@@ -200,9 +200,8 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
                             android:text="Batch Date"
                             android:textColor="@color/xdark_gray"
@@ -213,6 +212,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
                             android:text="07/27/2020 @ 2:20 am"
@@ -227,9 +227,8 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/reserve_rules"
                             android:textColor="@color/xdark_gray"
@@ -397,9 +396,8 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/release_on"
                             android:textColor="@color/dark_grey"
@@ -410,6 +408,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
                             android:text="07/27/2020 @ 2:20 am"
@@ -466,9 +465,8 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1.3"
                             android:fontFamily="@font/opensans_regular"
                             android:text="@string/to_token_account"
                             android:textColor="@color/xdark_gray"
@@ -480,6 +478,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:singleLine="true"
                             android:fontFamily="@font/opensans_semibold"
                             android:gravity="end"
                             android:text="[DBA Name Here]"
