--- a/app/src/main/res/layout/seekbar_with_floating_text.xml
+++ b/app/src/main/res/layout/seekbar_with_floating_text.xml
@@ -10,7 +10,7 @@
         android:fontFamily="@font/opensans_bold"
         android:textColor="@color/primary_black"
         android:singleLine="true"
-        android:textSize="@dimen/_10ssp" />
+        android:textSize="@dimen/_9ssp" />
 
     <SeekBar
         android:id="@+id/seekbar"
@@ -18,8 +18,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_floating_text"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
         android:max="24"
         android:textSize="12sp" />
 
@@ -28,10 +28,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/seekbar"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="-20dp"
         android:textColor="@color/primary_black"
-        android:fontFamily="@font/opensans_bold"
+        android:fontFamily="@font/opensans_regular"
         android:text="0:00am"
         android:textSize="@dimen/_10ssp" />
 
@@ -42,9 +42,9 @@
         android:layout_below="@+id/seekbar"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="-20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="20dp"
         android:textColor="@color/primary_black"
-        android:fontFamily="@font/opensans_bold"
+        android:fontFamily="@font/opensans_regular"
         android:text="11:59pm"
         android:textSize="@dimen/_10ssp" />
 </RelativeLayout>
