--- a/app/src/main/res/layout/activity_merchant_learn_more.xml
+++ b/app/src/main/res/layout/activity_merchant_learn_more.xml
@@ -4,71 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/btmshet_top_radius"
-    >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="@dimen/_21sdp"
-        android:paddingRight="@dimen/_19sdp"
-        >
-    <View
-        android:layout_width="@dimen/_43sdp"
-        android:layout_height="@dimen/_2sdp"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/_13sdp"
-        android:background="@drawable/shape_green_round_rect"
-        android:layout_marginBottom="@dimen/_12sdp"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_x"
-        android:layout_marginBottom="@dimen/_23sdp"
-        />
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:text="A merchant account reserve is a predetermined\namount of a business’s revenue held in reserve\nby an acquiring bank. This reserve protects the\nbanks against unforeseen liabilities in the event\nof fraud or chargebacks."
-           android:textSize="@dimen/_11ssp"
-           android:fontFamily="@font/opensans_regular"
-           android:textColor="@color/primary_black"
-           android:layout_marginBottom="@dimen/_9sdp"
-           />
+        android:paddingRight="@dimen/_19sdp">
+
+        <View
+            android:layout_width="@dimen/_43sdp"
+            android:layout_height="@dimen/_2sdp"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_13sdp"
+            android:layout_marginBottom="@dimen/_12sdp"
+            android:background="@drawable/shape_green_round_rect" />
+
+        <ImageView
+            android:id="@+id/closeIv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_23sdp"
+            android:src="@drawable/ic_x" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_9sdp"
+            android:fontFamily="@font/opensans_regular"
+            android:text="A merchant account reserve is a predetermined\namount of a business’s revenue held in reserve\nby an acquiring bank. This reserve protects the\nbanks against unforeseen liabilities in the event\nof fraud or chargebacks."
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_regular"
             android:text="@string/rolling_reserves_with_a_rolling_reserve"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
             android:textColor="@color/primary_black"
-            />
+            android:textSize="@dimen/_11ssp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_regular"
+            android:layout_marginBottom="@dimen/_4sdp"
             android:text="merchant account, a percentage of each credit\ncard deposit is held in reserve for a\npredetermined time, then released. The amount\nheld back is usually 5-15% of the account\nbalance."
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
             android:textColor="@color/primary_black"
-            />
+            android:textSize="@dimen/_11ssp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_regular"
             android:text="@string/manually_reserves"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
             android:textColor="@color/primary_black"
-            />
+            android:textSize="@dimen/_11ssp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="to an Instant Pay bank account uses your debit\ncard to facilitate the process. This typically takes\nabout 30 seconds to process, but can take up to\n30 minutes depending on your bank. Most, but\nnot all banks support Instant Pay"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
-            android:textColor="@color/primary_black"
             android:layout_marginBottom="@dimen/_20sdp"
-            />
+            android:fontFamily="@font/opensans_regular"
+            android:text="to an Instant Pay bank account uses your debit\ncard to facilitate the process. This typically takes\nabout 30 seconds to process, but can take up to\n30 minutes depending on your bank. Most, but\nnot all banks support Instant Pay"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp" />
 
     </LinearLayout>
 </LinearLayout>
